# nwnx2-linux

./: .gitignore  CMakeLists.txt  NWNXBase.cpp  nwnx2lib.cpp  nwnx_modules.h
include/: nwn_const.h  nwn_funcs.h
include/structs/: CGameObject_VTable.h  CNWSCreature.h  CNWSCreatureStats.h  CNWSModule.h  CNWSPlayer.h  CNWSSpellScriptData.h  CNWSpellArray.h  CResRef.h  CServerInfo.h  all.h
lib/: nwn_data.c
plugins/areas/: HookFunc.cpp  HookFunc.h  NWNXAreas.cpp  nwnx_areas.nss
plugins/combat/: CMakeLists.txt  NWNXCombat.cpp  NWNXCombat.h  README.md  TODO.md  common.h  consts.h  funcs.h  handle_request.cpp  handles.h  hook_functions.cpp  hooks.h  nwnx2.ini  plugin-combat.cpp
plugins/combat/combat/: Attack.cpp  Attack.h  AttackData.cpp  AttackData.h  Defense.h  Offense.h  combat.h
plugins/combat/common/: README.md  c_CanUseClassAbilities.cpp  c_GetAttackTypeFromEquipNum.cpp  c_GetBaseArmorClass.cpp  c_GetBaseConcealment.cpp  c_GetBaseSoak.cpp  c_GetCombatModFavoredEnemy.cpp  c_GetCombatModSituation.cpp  c_GetCombatModTrainingVs.cpp  c_GetCombatModeMod.cpp  c_GetDualWieldPenalty.cpp  c_GetEquipNumFromAttackType.cpp  c_GetFavoredEnemyMask.cpp  c_GetIsMonkWeapon.cpp  c_GetIsRangedWeapon.cpp  c_GetIsUnarmedWeapon.cpp  c_GetIsWeaponIntuitable.cpp  c_GetIsWeaponKensei.cpp  c_GetIsWeaponLight.cpp  c_GetSavingThrowVsBonus.cpp  c_GetSkillFeatBonus.cpp  c_GetTargetState.cpp  c_GetTrainingVsMask.cpp  c_GetUnarmedBaseDamage.cpp  c_GetWeaponAmmoDamage.cpp  c_GetWeaponAttackAbility.cpp  c_GetWeaponAttackBonus.cpp  c_GetWeaponBaseDamage.cpp  c_GetWeaponCritDamage.cpp  c_GetWeaponCritMultiplier.cpp  c_GetWeaponCritRange.cpp  c_GetWeaponDamage.cpp  c_GetWeaponDamageAbility.cpp  c_GetWeaponIteration.cpp  c_GetWeaponPower.cpp
plugins/combat/funcs/: f_DumpCombatMods.cpp  f_GetABVersus.cpp  f_GetACVersus.cpp  f_GetCombatInfo.cpp  f_GetMaxHitPoints.cpp  f_GetSkillRank.cpp  f_RegisterModeCombatMod.cpp  f_SendCombatInfo.cpp  f_SendDamageRoll.cpp
plugins/combat/handles/: hndl_EffectEvent.cpp  hndl_Event.cpp  hndl_ItemPropEvent.cpp  hndl_PluginsLoaded.cpp
plugins/combat/hooks/: h_AddAttackOfOpportunity.cpp  h_DoDamageImmunity.cpp  h_DoDamageReduction.cpp  h_DoDamageResistance.cpp  h_ExecuteCommandDoTouchAttack.cpp  h_GetArmorClassVersus.cpp  h_GetCreatureDamageDice.cpp  h_GetCriticalHitMultiplier.cpp  h_GetCriticalHitRoll.cpp  h_GetEffectImmunity.cpp  h_GetIsFlurryWeapon.cpp  h_GetMaxHitpoints.cpp  h_GetMeleeAttackBonus.cpp  h_GetMeleeDamageBonus.cpp  h_GetRangedDamageBonus.cpp  h_GetSkillRank.cpp  h_GetTotalEffectBonus.cpp  h_GetWeaponAttackType.cpp  h_GetWeaponFinesse.cpp  h_InitializeNumberOfAttacks.cpp  h_ResolveDamageShields.cpp  h_ResolveMeleeAttack.cpp  h_ResolveRangedAttack.cpp  h_SavingThrowRoll.cpp  h_UnequipItem.cpp
plugins/combat/nwn/: combat.lua  nwnx_combat.nss
plugins/combat/object/: Creature.cpp  Creature.h  CreatureDefense.cpp  CreatureDefense.h  CreatureOffense.cpp  CreatureOffense.h  SituatedObject.cpp  SituatedObject.h
plugins/damage/: CMakeLists.txt  DamageObjCmds.gperf  DamageStrCmds.gperf  HookFunc.cpp  HookFunc.h  Hooks.cpp  Makefile.in  NWNXDamage.cpp  NWNXDamage.h  plugin-damage.cpp
plugins/damage/funcs/: f_DoDamageCalc.c  f_GetCreator.c  f_GetDuration.c  f_GetDurationRemaining.c  f_GetHasEffect.c  f_GetInteger.c  f_GetSpellId.c  f_GetTrueType.c  f_SetCreator.c  f_SetInteger.c  f_SetSpellId.c  f_SetTrueType.c
plugins/damage/hooks/: h_DamageCalcs.c  h_PushStruct.c
plugins/defenses/: NWNXDefenses.h
plugins/defenses/hooks/: h_GetTumbleACBonus.c
plugins/defenses/local/: l_AdjustCombatHitDamage.c  l_GetACTouchBase.c
plugins/dmactions/: FunctionHooks.cpp
plugins/effects/: CMakeLists.txt  HandleFunc.cpp  Makefile.in  NWNXEffects.cpp  NWNXEffects.h  funcs.h  hook_funcs.cpp  hooks.h
plugins/effects/funcs/: f_GetEffectImmunity.cpp  f_LogEffects.cpp  f_SendEffects.cpp  f_SetEffectHandler.cpp
plugins/effects/hooks/: h_ExecuteCommandApplyEffectOnObject.cpp  h_OnEffectApplied.cpp  h_OnEffectRemoved.cpp  h_RemoveBadEffects.cpp
plugins/effects/local/: l_GetEffectImmunity.cpp
plugins/extend/: Hooks.cpp  Hooks.h  Makefile.in  NWNXextend.h
plugins/haks/: Makefile.in
plugins/haks/funcs/: f_SetHakHidden.cpp
plugins/haks/hooks/: h_PackModuleIntoMessage.cpp
plugins/items/: NWNXItems.cpp
plugins/items/hooks/: h_CalculateBaseCosts.cpp
plugins/jvm/: CMakeLists.txt  Makefile.in
plugins/jvm/java/: build.xml
plugins/levels/: CMakeLists.txt  NWNXLevels.cpp  NWNXLevels.h
plugins/levels/funcs/: f_LevelUp.cpp
plugins/levels/nwn/: nwnx_levels.nss
plugins/nschat/: CMakeLists.txt  NWNXChat.cpp  NWNXChat.h  hook_funcs.cpp  plugin-chat.cpp
plugins/nschat/hooks/: h_SendServerToPlayerCCMessage.cpp  h_SendServerToPlayerChatMessage.cpp  h_SendServerToPlayerChat_Party.cpp  h_SendServerToPlayerChat_Shout.cpp  h_SendServerToPlayerChat_Talk.cpp  h_SendServerToPlayerChat_Tell.cpp
plugins/nschat/local/: l_GetIgnoreMask.cpp  l_GetIsIgnoring.cpp
plugins/nschat/nwn/: cc_script.nss  nwnx_chat.nss
plugins/nsevents/: CMakeLists.txt  NWNXEvents.cpp  NWNXEvents.h  hook_funcs.cpp  nwnx2.ini  plugin-events.cpp
plugins/nsevents/hooks/: h_AIActionPickPocket.cpp  h_AddAttackActions.cpp  h_AddCastSpellActions.cpp  h_CNWSObject_dtor.cpp  h_CheckScript.cpp  h_ExecuteCommand.cpp  h_HandleReply.cpp  h_PackCreatureIntoMessage.cpp  h_PossessFamiliar.cpp  h_ReportError.cpp  h_SendServerToPlayerExamineGui_CreatureData.cpp  h_SendServerToPlayerExamineGui_DoorData.cpp  h_SendServerToPlayerExamineGui_ItemData.cpp  h_SendServerToPlayerExamineGui_PlaceableData.cpp  h_SendServerToPlayerQuickChatMessage.cpp  h_SetPVPPlayerLikesMe.cpp  h_SetPauseState.cpp  (+4 more)
plugins/physfs/: NWNXPhysfs.cpp  README.md
plugins/resman/: NWNXResMan.cpp
plugins/resources/: HookDemandRes.cpp  NWNXResources.cpp  NWNXResources.h  readme.md
plugins/solstice/: CMakeLists.txt  NWNXSolstice.cpp  NWNXSolstice.h  hook_functions.cpp
plugins/solstice/handles/: hndl_ConversationEvent.cpp
plugins/solstice/hooks/: h_CNWSObject_dtor.cpp
talib/: creature.c
talib/nwn/: creature.c  creature.h  init.c  waypoint.c
(+52 files in other folders)
